--- a/package.json
+++ b/package.json
@@ -10,18 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tsparticles/react": "^3.0.0",
-    "particles.js": "^2.0.0",
     "rc-progress": "^3.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-simple-animate": "^3.5.2",
-    "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "sass": "^1.71.1",
-    "tsparticles": "^3.2.2"
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
