--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-simple-animate": "^3.5.2",
+    "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
